update new project config on gg

--- a/client-side/index.html
+++ b/client-side/index.html
@@ -13,32 +13,26 @@
     <script src="https://www.gstatic.com/firebasejs/5.0.4/firebase.js"></script>
     <script>
         var config = {
-            apiKey: "AIzaSyAtB1e1Id6QWJgxvY26FrL3mQEULz8r4sw",
-            authDomain: "fir-noti-488c0.firebaseapp.com",
-            databaseURL: "https://fir-noti-488c0.firebaseio.com",
-            projectId: "fir-noti-488c0",
-            storageBucket: "fir-noti-488c0.appspot.com",
-            messagingSenderId: "839383998651"
+            apiKey: "AIzaSyB_bDKxPMX3BTL4aZ5HNc_Te_usx46G49w",
+            authDomain: "awesome-project-75e5e.firebaseapp.com",
+            databaseURL: "https://awesome-project-75e5e.firebaseio.com",
+            projectId: "awesome-project-75e5e",
+            storageBucket: "",
+            messagingSenderId: "631475714981"
         };
         firebase.initializeApp(config);
-        // Retrieve Firebase Messaging object.
         const messaging = firebase.messaging();
-        // Add the public key generated from the console here.
         messaging.usePublicVapidKey(
             "BPT3VZ3oTVrG0jMPyCnffDralJ9Ramg8SirlyJA6eLMsmL2MUpQXrh5BwODBVV-F5ndFosW4_Ec8V7bjLMtsM8c");
         messaging.requestPermission().then(function () {
             console.log('Notification permission granted.');
-            // Get Instance ID token. Initially this makes a network call, once retrieved
-            // subsequent calls to getToken will return from cache.
             messaging.getToken().then(function (currentToken) {
                 if (currentToken) {
                     console.log(currentToken);
                 } else {
-                    // Show permission request.
                     console.log('No Instance ID token available. Request permission to generate one.');
-                    // Show permission UI.
                     console.log(`token is: ${JSON.stringify(currentToken)}`);
-                    document.getElementById('token').innerHTML = currentToken;
+                    document.getElementById('token').innerHTML = `${JSON.stringify(currentToken)}`;
                 }
             }).catch(function (err) {
                 console.log('An error occurred while retrieving token. ', err);
